# gateway

./: .dockerignore  AUTH.md  CIRCUIT_BREAKER.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FUTURE.md  LICENSE  OPERATIONS.md  RATE_LIMITING.md  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
benches/: gateway_benchmarks.rs
config/: gateway.yaml
examples/: auth-apikey.yaml  auth-jwt.yaml  auth-mixed.yaml  auth-redis.yaml  auth-rs256.yaml  docker-compose-observability.yml  grafana-dashboard.json  grafana-datasources.yml  load-balancer-full-featured.yaml  load-balancer-ip-hash.yaml  load-balancer-least-connections.yaml  load-balancer-round-robin.yaml  load-balancer-weighted.yaml  microservices.yaml  observability-full.yaml  observability-metrics.yaml  phase7-cache.yaml  phase7-complete.yaml  phase7-cors.yaml  phase7-ipfilter.yaml  phase7-transform.yaml  prometheus.yml  rate-limiting.yaml  simple.yaml
helm/api-gateway/: Chart.yaml  README.md  values.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secrets.yaml  service.yaml  servicemonitor.yaml
scripts/loadtest/: README.md  k6-load-test.js  k6-spike-test.js  k6-stress-test.js  wrk-auth.sh  wrk-basic.sh
src/: lib.rs  main.rs
src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs
src/cache/: mod.rs
src/circuit_breaker/: breaker.rs  mod.rs  retry.rs  service.rs  types.rs
src/config/: mod.rs
src/cors/: mod.rs
src/error/: mod.rs
src/proxy/: mod.rs
tests/: circuit_breaker_tests.rs  integration_test.rs
(+28 files in other folders)
